--- a/optui/public/css/timer.css
+++ b/optui/public/css/timer.css
@@ -30,16 +30,20 @@ timer {
 }
 
 controls {
-  font-size: 2.5vmax;
-  padding-top: 2.5vmax;
-}
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+   font-size: 2.5vmax;
+   padding-top: 2.5vmax;
+ }
 
 currentBlindsAndAnte {
   width: 100%;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
-  font-size: 8vmax;
+  font-size: 6.5vmax;
   text-shadow: .5vmax .5vmax .5vmax black;
 }
 
@@ -47,3 +51,17 @@ currentBlindsAndAnte {
   opacity: .75;
   height: 2vmax;
 }
+
+#gamePausedOverlay {
+  background-color: red;
+  font-size: 8vh;
+  color: white;
+  font-weight: 700;
+  text-align: center;
+  position: absolute;
+  z-index:100;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  visibility: hidden;
+ }
