--- a/optui/public/css/timer.css
+++ b/optui/public/css/timer.css
@@ -66,7 +66,7 @@ currentBlindsAndAnte {
   visibility: hidden;
 }
 
-#gamePausedOverlay {
+#dataErrorOverlay {
   background-color: red;
   font-size: 8vh;
   color: white;
